feat: DOC-004 - adicionar anotações Swagger nos handlers de Transaction
- Melhorar anotações Swagger no método Create
- Melhorar anotações Swagger no método List
- Melhorar anotações Swagger no método Get
- Melhorar anotações Swagger no método Update
- Melhorar anotações Swagger no método Delete
- Adicionar descrições mais detalhadas
- Adicionar códigos de resposta HTTP completos (403 para Forbidden)
- Documentar atualização parcial no Update
- Documentar soft delete no Delete
- Regenerar documentação Swagger
